--- a/modbus-slave/ashbin/.vscode/settings.json
+++ b/modbus-slave/ashbin/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe"
+    "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+    "files.associations": {
+        "*.m": "matlab",
+        "*.tex": "latex",
+        "stm32f4xx_ll_tim.h": "c",
+        "stm32f4xx.h": "c",
+        "stm32f4xx_hal.h": "c"
+    }
 }
